# thingino-cloner

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  NOTICE  README.md
.github/workflows/: build.yml
android/: gradlew  gradlew.bat  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: firmwares
android/app/src/main/java/com/thingino/cloner/: ClonerBridge.kt  MainActivity.kt  RemoteClient.kt  UsbHelper.kt
android/app/src/main/jni/: CMakeLists.txt  cloner_jni.c
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/xml/: device_filter.xml
cli/: CMakeLists.txt  main.c  remote.c  remote.h
cloner-remote/: CMakeLists.txt  main.c
cmake/: toolchain-aarch64-linux.cmake
docs/: ADDING_HARDWARE.md  ENGINEERING.md
libcloner/: CMakeLists.txt
libcloner/include/: flash_descriptor.h  thingino.h
libcloner/include/cloner/: constants.h  core.h  flash_descriptor.h  platform_compat.h  platform_profile.h  protocol.h  thingino.h  types.h
libcloner/src/: bootstrap.c  core.c  operations.c  platform.c  utils.c
libcloner/src/ddr/: ddr_binary_builder.c  ddr_binary_builder.h  ddr_config_database.c  ddr_ctrl_txx.c  ddr_fidb_xb1.c  ddr_generator.c  ddr_param_builder.c  ddr_phy.c  ddr_phy_ddr2.c  ddr_utils.c
libcloner/src/firmware/: flash_descriptor.c  handshake.c  loader.c  reader.c  writer.c  writer.h
libcloner/src/flash/: spi_nor_db.c  spi_nor_db.h
libcloner/src/usb/: .protocol.c.swp  device.c  manager.c  protocol.c
scripts/: fetch-libusb-win.sh
tests/: CMakeLists.txt  test_config_database.c  test_ddr_integration.c  test_ddr_reference.c  test_flash_db.c  test_protocol.c
web/: CMakeLists.txt  build.sh  index.html
web/libusb-stub/libusb-1.0/: libusb.h
web/src/: app.js  libusb-webusb.js  web_main.c
